force-app/main/default/objects/DailyModule__c/DailyModule__c.object-meta.xml
<CustomObject>
    <label>Daily Module</label>
    <nameField>
        <label>Daily Module Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Daily Modules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>