force-app/main/default/objects/DailyModule__c/fields/Completed__c.field-meta.xml
<CustomField>
    <fullName>Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Has the module been completed?</description>
    <label>Completed</label>
    <type>Checkbox</type>
</CustomField>