force-app/main/default/objects/DailyModule__c/fields/Module__c.field-meta.xml
<CustomField>
    <fullName>Module__c</fullName>
    <label>Module</label>
    <referenceTo>Module__c</referenceTo>
    <relationshipLabel>Daily Modules</relationshipLabel>
    <relationshipName>Daily_Modules</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>