force-app/main/default/objects/DailyModule__c/fields/ModuleURL__c.field-meta.xml
<CustomField>
    <fullName>ModuleURL__c</fullName>
    <formula>IF(
  !ISBLANK(Module__r.URL__c), Module__r.URL__c, &apos;&apos;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Module URL</label>
    <type>Text</type>
</CustomField>