force-app/main/default/objects/DailyModule__c/listViews/My_Daily_Modules.listView-meta.xml
<ListView>
    <fullName>My_Daily_Modules</fullName>
    <columns>ModuleURL__c</columns>
    <columns>Completed__c</columns>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>My Daily Modules</label>
</ListView>